# mealplanner

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: cli.py  streamlit_app.py
data/: constraints.json  foods.json  groups.json  meal_plan_specs.md  meal_types.json  recipes.json
domain/: export_pdf.py  generator.py  models.py  rules.py  shopping.py
tests/: test_export_pdf.py  test_generator.py  test_models.py  test_rules.py  test_shopping.py
